Fix edit page container spacing bug

--- a/public/styles.scss
+++ b/public/styles.scss
@@ -232,7 +232,8 @@ body {
     }
 }
 
-.container {
+.container,
+.container-login {
     margin: 10px auto;
     text-align: center;
     width: 100%;
@@ -289,7 +290,7 @@ body {
         text-decoration: none;
         font-weight: bold;
         color: $turq;
-        margin: 13px auto;
+        margin: 0 auto;
         display: block;
         &:hover {
             text-decoration: underline;
